# Machine-Learn

./: .gitignore  Readme.md  app.py  pyproject.toml  requirements.txt  test.ipynb
src/DataFrame/: pizzas.csv
